Fix alignment with flexbox

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,51 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/* my solution */
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul, 
+ol {
+  list-style: none;
+  padding-inline: 0;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.left-links,
+.right-links {
+  display: flex;
+  gap: 16px;
+  margin: 16px 16px;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex: auto;
+}
+
+.footer {
+  display: flex;
+  background-color: rgb(233, 233, 233); 
+  justify-content: space-between;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+button {
+  padding: 8px 12px;
+}
